--- a/interviewtips.html
+++ b/interviewtips.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Interview Tips</title>
     <header>
+      <img src="logo.png" alt="logo goes here" />
     <nav class="horizontal">
       <ul>
         <li><a href="index.html">Home</a></li>
