--- a/interviewtips.html
+++ b/interviewtips.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-    <title>Interview Tips</title>
-    <header>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="website.css">
+  <title>Interview Tips</title>
+  <header>
+
+
     <nav class="horizontal">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -14,31 +18,34 @@
         <li><a href="#">Page 5</a></li>
       </ul>
     </nav>
-  </header>
-  </head>
-  <body>
-    <h1>Tips to Better Prepare you for Your Interview</h1>
-    <h2>Conduct research granularity about the company so you can talk shop</h2>
-    <p>the research is done for you to get familiar with the job and you can start to talk about the job to other people</p>
-    <h2>Research the person with whom you're meeting such as with LinkedIn.</h2>
-    <p><a href="https://www.linkedin.com/">LinkedIn</a> can be used as information about the person that can potentially be interviewing you</p>
-    <h2>Make friends when you walk into the establishment by being super charming to everyone you meet.</h2>
-    <p>anyone you see at the office you need to be very friendly because you dont know who everyone is and who they can be</p>
-    <h2>Keep your answers short but concise. Don't ramble.</h2>
-    <p>keep you answers consistant</p>
 
-    <h2>Utilize body language with eye contact, posture, way you sit and stand, the way you walk into the room.</h2>
-    <p> Sit up straight and look the interviewer in the eyes dont examine the room be focused.When you walk in greet the person intervieing you and be confedent that you will get the job.https://www.linkedin.com/</p>
-    <h2>Bring a portfolio to keep all interview materials along with predetermined questions.</h2>
-    <p>resime, business cards and a notebook</p>
-    <h2>Have a list of questions to ask.</h2>
-    <p>the interviewer is going to ask you what questinos you have for them at some point of the interview and if you have quesitons it makes it look like you are into the job. Also be prepared to answer any question they may have about you know your positives and your negatives about yourself.</p>
-    <h2>Sell yourself and shine! Don't be modest; however, be confident. Self promote!</h2>
-    <p>This part of the interview is the part where you brag about yourself and you need to make yourself look good</p>
-    <!-- <h2>Before you walk out of the office, you let them know that you are the man for the job, want the job, are excited, and want to be part of the organization. Shake hands like a man.</h2>
+  </header>
+</head>
+
+<body>
+  <h1>Tips to Better Prepare you for Your Interview</h1>
+  <h2>Conduct research granularity about the company so you can talk shop</h2>
+  <p>the research is done for you to get familiar with the job and you can start to talk about the job to other people</p>
+  <h2>Research the person with whom you're meeting such as with LinkedIn.</h2>
+  <p><a href="https://www.linkedin.com/">LinkedIn</a> can be used as information about the person that can potentially be interviewing you</p>
+  <h2>Make friends when you walk into the establishment by being super charming to everyone you meet.</h2>
+  <p>anyone you see at the office you need to be very friendly because you dont know who everyone is and who they can be</p>
+  <h2>Keep your answers short but concise. Don't ramble.</h2>
+  <p>keep you answers consistant</p>
+
+  <h2>Utilize body language with eye contact, posture, way you sit and stand, the way you walk into the room.</h2>
+  <p> Sit up straight and look the interviewer in the eyes dont examine the room be focused.When you walk in greet the person intervieing you and be confedent that you will get the job.https://www.linkedin.com/</p>
+  <h2>Bring a portfolio to keep all interview materials along with predetermined questions.</h2>
+  <p>resime, business cards and a notebook</p>
+  <h2>Have a list of questions to ask.</h2>
+  <p>the interviewer is going to ask you what questinos you have for them at some point of the interview and if you have quesitons it makes it look like you are into the job. Also be prepared to answer any question they may have about you know your positives
+    and your negatives about yourself.</p>
+  <h2>Sell yourself and shine! Don't be modest; however, be confident. Self promote!</h2>
+  <p>This part of the interview is the part where you brag about yourself and you need to make yourself look good</p>
+  <!-- <h2>Before you walk out of the office, you let them know that you are the man for the job, want the job, are excited, and want to be part of the organization. Shake hands like a man.</h2>
     <p></p> -->
-    <h2>What to wear when going to an interview</h2>
-    <p>When picking your attire pick something depending on the job you are getting interviewed for but you should look one step more formal than everyone else in the office. </p>
-  </body>
+  <h2>What to wear when going to an interview</h2>
+  <p>When picking your attire pick something depending on the job you are getting interviewed for but you should look one step more formal than everyone else in the office. </p>
+</body>
 
 </html>
