--- a/interviewtips.html
+++ b/interviewtips.html
@@ -36,8 +36,9 @@
     <p>the interviewer is going to ask you what questinos you have for them at some point of the interview and if you have quesitons it makes it look like you are into the job. Also be prepared to answer any question they may have about you know your positives and your negatives about yourself.</p>
     <h2>Sell yourself and shine! Don't be modest; however, be confident. Self promote!</h2>
     <p>This part of the interview is the part where you brag about yourself and you need to make yourself look good</p>
-    <!-- <h2>Before you walk out of the office, you let them know that you are the man for the job, want the job, are excited, and want to be part of the organization. Shake hands like a man.</h2>
-    <p></p> -->
+    <h2>What to do when the interview is over</h2>
+   <p>Prior to walking out of the office, you should let them know that you are the man for the job, want the job, are excited, and want to be part of the organization. Shake hands like a man.(Firm Handshake)</p>
+    <p></p>
     <h2>What to wear when going to an interview</h2>
     <p>When picking your attire pick something depending on the job you are getting interviewed for but you should look one step more formal than everyone else in the office. </p>
   </body>
