--- a/interviewtips.html
+++ b/interviewtips.html
@@ -29,7 +29,7 @@
     <p>keep you answers consistant</p>
 
     <h2>Utilize body language with eye contact, posture, way you sit and stand, the way you walk into the room.</h2>
-    <p> Sit up straight and look the interviewer in the eyes dont examine the room be focused.When you walk in greet the person intervieing you and be confedent that you will get the job.https://www.linkedin.com/</p>
+    <p> when in an interview lean in slightly and keep your shoulders back and down with your chest high it will demonstrate interest in what the interviewer is talking about. look the interviewer in the eyes be respectful and give him your attention.When you walk in greet the person intervieing you and be confedent that you will get the job.https://www.linkedin.com/</p>
     <h2>Bring a portfolio to keep all interview materials along with predetermined questions.</h2>
     <p>resume, business cards and a notebook</p>
     <h2>Have a list of questions to ask.</h2>
