--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
   <title>How to get a job?</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="website.css">
+  <!-- These are the links that will give the index page the color and design for the page -->
 </head>
 
 <body>
   <div id="left">
+    <!-- this is the div that will be used to do the side bar for the page this will give a place for the nav and will give us the ablity to move the nav bar easily -->
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
+        <li ><a id="active" href="#">Home</a></li>
         <li><a href="#">Interview Tips</a></li>
         <li><a href="#">Page 3</a></li>
         <li><a href="#">Page 4</a></li>
         <li><a href="#">Page 5</a></li>
       </ul>
     </nav>
+    <!-- This is the nav bar that will give the ability to acesses any of the pages that are display on the nav bar -->
   </div>
 
   <section id="content">
