--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div id="left">
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Interview Tips</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="interviewtips.html">Interview Tips</a></li>
         <li><a href="#">Page 3</a></li>
         <li><a href="#">Page 4</a></li>
         <li><a href="#">Page 5</a></li>
