--- a/interviewtips.html
+++ b/interviewtips.html
@@ -3,36 +3,48 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="website.css">
+  <!-- <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="website.css"> -->
+    <link rel="stylesheet" href="styles2.css">
   <title>Interview Tips</title>
   <header>
 
 
-    <nav class="horizontal">
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="interviewtips.html">Interview Tips</a></li>
-        <li><a href="#">Page 3</a></li>
-        <li><a href="#">Page 4</a></li>
-        <li><a href="#">Page 5</a></li>
-      </ul>
-    </nav>
+<div id="left" width:"25%">
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a class="active" href="interviewtips.html">Interview Tips</a></li>
+      <li><a href="job.html">Job</a></li>
+      <li><a href="#">Page 4</a></li>
+      <li><a href="#">Page 5</a></li>
+    </ul>
+  </nav>
+</div>
 
   </header>
 </head>
 
-    <h2>Utilize body language with eye contact, posture, way you sit and stand, the way you walk into the room.</h2>
-    <p> when in an interview lean in slightly and keep your shoulders back and down with your chest high it will demonstrate interest in what the interviewer is talking about. look the interviewer in the eyes be respectful and give him your attention.When you walk in greet the person intervieing you and be confedent that you will get the job.https://www.linkedin.com/</p>
-    <h2>Bring a portfolio to keep all interview materials along with predetermined questions.</h2>
-    <p>resume, business cards and a notebook</p>
+<body>
+<h1>Tips to Better Prepare you for Your Interview</h1>
+<h2>What to do ahead of time</h2>
+<p>Conduct research granularity about the company so you can talk shop with everyone. The research is done for you to get familiar with the job and you can start to talk about the job to other people</p>
+<h2>Research the person who you're meeting with</h2>
+<p><a href="https://www.linkedin.com/">LinkedIn</a> can be used as information about the person that can potentially be interviewing you</p>
+<h2>Make friends</h2>
+<p>when you walk into the establishment by being super charming to everyone you meet. Anyone you see at the office you need to be very friendly because you dont know who everyone is and who they can be</p>
+<h2>How to answer the questions</h2>
+<p>Keep your answers short but concise. Don't ramble.keep you answers consistant. you should have your answers already written down for every possible question.</p>
+    <h2>Body Language</h2>
+    <p>When you are in a job interview utilize body language with eye contact, posture, way you sit and stand, the way you walk into the room. when in an interview lean in slightly and keep your shoulders back and down with your chest high it will demonstrate interest in what the interviewer is talking about. look the interviewer in the eyes be respectful and give him your attention.When you walk in greet the person intervieing you and be confedent that you will get the job.</p>
+    <h2>What should you bring with you to a job interview</h2>
+    <p>Bring a portfolio to keep all interview materials along with predetermined questions and some answers to some possible questions they might ask you or quesitons you have trouble with also bring a resume, business cards and a notebook</p>
     <h2>Have a list of questions to ask.</h2>
     <p>the interviewer is going to ask you what questinos you have for them at some point of the interview and if you have quesitons it makes it look like you are into the job. Also be prepared to answer any question they may have about you know your positives and your negatives about yourself.</p>
-    <h2>Sell yourself and shine! Don't be modest; however, be confident. Self promote!</h2>
-    <p>This part of the interview is the part where you brag about yourself and you need to make yourself look good</p>
+    <h2>Personal Accomplishments and why they should hire you.</h2>
+    <p>Sell yourself and shine! Don't be modest; however, be confident. Self promote!This part of the interview is the part where you brag about yourself and you need to make yourself look good</p>
     <h2>What to do when the interview is over</h2>
    <p>Prior to walking out of the office, you should let them know that you are the man for the job, want the job, are excited, and want to be part of the organization. Shake hands like a man.(Firm Handshake)</p>
-    <p></p>
     <h2>What to wear when going to an interview</h2>
     <p>When picking your attire pick something depending on the job you are getting interviewed for but you should look one step more formal than everyone else in the office. </p>
   </body>
