--- a/index.html
+++ b/index.html
@@ -6,28 +6,26 @@
   <title>How to get a job?</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="website.css">
+
 </head>
 
 <body>
-  <div id="left">
+  <div id="left" width:"25%">
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="interviewtips.html">Interview Tips</a></li>
-        <li><a href="#">Page 3</a></li>
+        <li><a href="job.html">Job</a></li>
         <li><a href="#">Page 4</a></li>
         <li><a href="#">Page 5</a></li>
       </ul>
     </nav>
   </div>
-
-  <section id="content">
-
-  </section>
-
-  <article class="">
-
-  </article>
+  <h1>JOB PENGUIN</h1>
+<div style="margin-left:25%">
+<img src="logo.png" alt="Logo goes here" align="right" style="width:100%"/>
+<h2></h2>
+</div>
 </body>
 
 </html>
