--- a/job.html
+++ b/job.html
@@ -1,31 +1,40 @@
-@<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>resume/cover/title>
-    <link rel="stylesheet" href="styles.css">
-    <nav>
-      <ul><a href="index.html">Home</a></ul>
-      <ul><a href="interviewtips.html">Interview Tips</a></ul>
-    </nav>
+    <title>resume/cover/title></title>
+
+    <!-- <link rel="stylesheet" href="website.css"> -->
+    <link rel="stylesheet" href="divider.css">
+    <link rel="stylesheet" href="website.css">
+
+    <div id="left" width:"25%">
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="interviewtips.html">Interview Tips</a></li>
+          <li><a class="active" href="job.html">Job</a></li>
+          <li><a href="#">Page 4</a></li>
+          <li><a href="#">Page 5</a></li>
+        </ul>
+      </nav>
+    </div>
   </head>
   <body>
-    <h1>Resume</h1>
-    <p>Tips on how to build a Resume</p>
-    <ul>Put your skills</ul>
-    <ul>Have your education</ul>
-    <ul>have your contact in the resume</ul>
-
-    <h1>Tips for cover letters</h1>
-    <ol>State what you can do for the company</ol>
-    <ol>Provide information on what you excel at</ol>
-    <ol>Have what you accomplished in the letter that you are most proud of</ol>
-
-    <h1>How to find jobs</h1>
-    <p>There are many companies and busniess that are hiring people. There are websites
-      that help people find Jobs.<br> like monster.com it buitl it a way to help find jobs
-      in you area.
-    </p>
-
+<h1>Top 2 Essentials to find a job</h1>
+    <div class="container vertical-divider">
+      <div class="column one-third">
+        <h2>Resume</h2>
+        <p>Tips on how to build a Resume <br /> Put all of your skills<br /> Put your education<br /> put all of your contact information</p>
+      </div>
+      <div class="column one-third">
+        <h2>cover letters</h2>
+        <p>Tell them what you can do for the company and how you can benifet the company<br /> Provide all of the thing you feel like you can excel at <br /> Put all of your accomplishments and everything you are proud of</p>
+      </div>
+      <div class="column one-third">
+        <h2>how to find a job</h2>
+        <p>There are many companies and businesses that are hiring people, there are websites that help people find jobs like <a href="https://www.monster.com/">monster.com</a> it helps you find a job in your area. </p>
+      </div>
+    </div>
   </body>
 </html>
