Added last piece of infromation
Added on emore line to the sentence

--- a/job.html
+++ b/job.html
@@ -25,15 +25,16 @@
     <div class="container vertical-divider">
       <div class="column one-third">
         <h2>Resume</h2>
-        <p>Tips on how to build a Resume <br /> Put all of your skills<br /> Put your education<br /> put all of your contact information</p>
+        <p>Tips on how to build a Resume <br /> Put all of your skills<br /> Put your education<br /> put all of your contact information<br /> Dont forget to put your education down, volunter work and any clubs that you help benefit<br /></p>
       </div>
       <div class="column one-third">
         <h2>cover letters</h2>
-        <p>Tell them what you can do for the company and how you can benifet the company<br /> Provide all of the thing you feel like you can excel at <br /> Put all of your accomplishments and everything you are proud of</p>
+        <p>Tell them what you can do for the company and how you can benifet the company<br /> Provide all of the thing you feel like you can excel at <br /> Put all of your accomplishments and everything you are proud of <br /></p>
       </div>
       <div class="column one-third">
-        <h2>how to find a job</h2>
-        <p>There are many companies and businesses that are hiring people, there are websites that help people find jobs like <a href="https://www.monster.com/">monster.com</a> it helps you find a job in your area. </p>
+        <h2>how to find a job/ Job applications</h2>
+        <p>There are many companies and businesses that are hiring people, there are websites that help people find jobs like <a href="https://www.monster.com/">monster.com</a> it helps you find a job in your area. Once you have found a job you have to fill out a job application.To fill out a job application you have to <br /> Put you name, date, contact information, addresss, social sercurtiy, and age <br /> answer all questions truthful.<br />Answer all questions or the ones that are highlighted(Note: Some companies have this).</p>
+
       </div>
     </div>
   </body>
