--- a/application.html
+++ b/application.html
@@ -9,17 +9,21 @@
     <div id="left" width:"25%">
       <nav>
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="interviewtips.html">Interview Tips</a></li>
           <li><a href="job.html">Job</a></li>
-          <li><a href="#">Page 4</a></li>
+          <li><a href="application.html">Application Form</a></li>
           <li><a href="#">Page 5</a></li>
         </ul>
       </nav>
     </div>
-    <h1>Why do employers use printed job application forms?</h1>
+    <h2>Why do employers use printed job application forms?</h2>
     <p>They use them to standerdize the information they gather from every applicant.They will obtain information from you that they you wont include in a resume.It will test your ability to follow instuctions.It will assess your attention to detail, such as neatness, spelling and grammmer.It will also record your employment history and your signature.</p>
-    <h1>Get ready</h1>
+    <h2>Get ready</h2>
     <p>before doing anything bring an erasable blue and black ink pen or a regular pen and correcting fluid as well as some blanck pieces of paper.Then find out about the company before applying so you know what skills,knowledge, and experience they are looking for.Bring your resume if you dont have it then make you sure you know the start and end dates of past employment, education and training. Make sure you know the name of your past employers, positions and job duties.Dress up as you were going to a job interview. and bring your skills portfollio and take as much time as you need to fill out the form.</p>
+    <h2>Fill out the form with care</h2>
+    <p>It would be good if you asked for two forms to use one for a rough and final copy if you dont get an extra form then make a copy on a peice of paper. Write clearly and neatly on the form assess how much space you have to answer each of the quesitons.if a question doesnt apply to you then write "N/A". If they ask for a salary you are looking go to <a href="https://alis.alberta.ca/occinfo/wages-and-salaries-in-alberta/">Wages and Saleries</a></p>
+    <h2>Go the Distance</h2>
+    <p>If there is an additional comments sections on the application fill it out because it is an opportunity to provide additional information about your skills, strenths and accomplishments.<strong>When you comlete the form</strong>double-check the form before you submit it and make sure the spelling and grammer is correct and complete. Also attach your resume to the form. Deliver the form the way the way the employer prefers.<strong>It is time comsuming</strong>but your qualities is what employeers look for, if your application is complete, accurate and honest you will have a good first impression at the interview</p>
   </body>
 </html>
