--- a/job.html
+++ b/job.html
@@ -13,8 +13,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="interviewtips.html">Interview Tips</a></li>
-          <li><a class="active" href="job.html">Job</a></li>
-          <li><a href="#">Page 4</a></li>
+          <li><a class="active" href="job.html">Job Essentials</a></li>
+          <li><a href="application.html">Application Form</a></li>
           <li><a href="#">Page 5</a></li>
         </ul>
       </nav>
@@ -25,11 +25,11 @@
     <div class="container vertical-divider">
       <div class="column one-third">
         <h2>Resume</h2>
-        <p>Tips on how to build a Resume <br /> Put all of your skills<br /> Put your education<br /> put all of your contact information<br /> Dont forget to put your education down, volunter work and any clubs that you help benefit<br /></p>
+        <p>Tips on how to build a Resume <br />Take your time to viod any erasures and try to keep it clean no stains on it. Double check the resume before you submit it. follow all instructions carefully and dont leave any spaces blank unless it doesnt apply to you. In the resume provide the following Experience, paid and volunteer. For each job, include the job title, name and location of employer, and dates of employment. Briefly describe your job duties. Special skills, computer skills, proficiency in foreign languages, achievements, and membership in organizations.Start with your years of work and your experience and the job duties performed provide a basic summary of your experience so  Put all of your skills<br /> Put your education<br /> put all of your contact information<br /> Dont forget to put your education down, volunter work and any clubs that you help benefit<br />A resume objective is usually 2 sentences long and states the kind of carreer you are seeking and the kind of skills and experience you have to ke you ideal for the job.</p>
       </div>
       <div class="column one-third">
         <h2>cover letters</h2>
-        <p>Tell them what you can do for the company and how you can benifet the company<br /> Provide all of the thing you feel like you can excel at <br /> Put all of your accomplishments and everything you are proud of <br /></p>
+        <p>The cover letter is just as important as the resume and it is sent with your resume <br />In the beginning of the letter state the position you are applying for then how your skills and experience can benifit the company.Employers are looking for applicants that have their eyes open on an open position not just someone that will just jump to any job Tell them what you can do for the company and how you can benifet the company<br /> Provide all of the thing you feel like you can excel at <br /> Put all of your accomplishments and everything you are proud of <br /></p>
       </div>
       <div class="column one-third">
         <h2>how to find a job/ Job applications</h2>
