--- a/application.html
+++ b/application.html
@@ -11,8 +11,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="interviewtips.html">Interview Tips</a></li>
-          <li><a href="job.html">Job</a></li>
-          <li><a href="application.html">Application Form</a></li>
+          <li><a href="job.html">Job Essentials</a></li>
+          <li><a class="active" href="application.html">Application Form</a></li>
           <li><a href="#">Page 5</a></li>
         </ul>
       </nav>
