--- a/interviewtips.html
+++ b/interviewtips.html
@@ -15,8 +15,8 @@
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a class="active" href="interviewtips.html">Interview Tips</a></li>
-      <li><a href="job.html">Job</a></li>
-      <li><a href="#">Page 4</a></li>
+      <li><a href="job.html">Job Essentials</a></li>
+      <li><a href="application.html">Application Form</a></li>
       <li><a href="#">Page 5</a></li>
     </ul>
   </nav>
