--- a/interviewtips.html
+++ b/interviewtips.html
@@ -17,7 +17,7 @@
       <li><a class="active" href="interviewtips.html">Interview Tips</a></li>
       <li><a href="job.html">Job Essentials</a></li>
       <li><a href="application.html">Application Form</a></li>
-      <li><a href="#">Page 5</a></li>
+      <li><a href="ask.html">Page 5</a></li>
     </ul>
   </nav>
 </div>
