--- a/ask.html
+++ b/ask.html
@@ -35,11 +35,11 @@
   </tr>
   <tr>
     <td>E-mail*</td>
-    <td><input type="text" name="email" required></td>
+    <td><input type="text" name="email" placeholder="Email@example.com" required></td>
   </tr>
   <tr>
     <td>rate us</td>
-  <td><input type="range" name="rate" value="5" step="1" min="0" max="10">10</td>
+  <td>0<input type="range" name="rate" value="5" step="1" min="0" max="10">10</td>
   </tr>
   <tr>
     <td>Was this advice helpful?</td>
