--- a/ask.html
+++ b/ask.html
@@ -39,7 +39,7 @@
   </tr>
   <tr>
     <td>rate us</td>
-  <td><input type="range" name="rate" value="5" step="1" min="0" max="10">10</td>
+  <td>0<input type="range" name="rate" value="5" step="1" min="0" max="10">10</td>
   </tr>
   <tr>
     <td>Was this advice helpful?</td>
